# ResearchCompass-AI

./: .gitignore  README.md  app.py  comapssai requirement.docx  config.py  main.py  pyproject.toml  report_generator.py  requirements.txt  test_arxiv.py  test_citation_scout.py  test_document_loader.py  test_embedder.py  test_feasibility_checker.py  test_gap_finder.py  test_graph.py  test_openalex.py  test_query_builder.py  test_report_generator.py  test_retriever.py  test_scholar.py  test_topic_suggester.py  test_trend_scanner.py  test_vector_store.py  test_web_search.py
agents/: citation_scout.py  feasibility_checker.py  gap_finder.py  novelty_detector.py  proposal_guide_generator.py  roadmap_generator.py  topic_refiner.py  topic_refiner_agent.py  topic_suggester.py  trend_scanner.py
graph/: orchestrator.py  state.py  synthesizer.py
rag/: document_loader.py  embedder.py  retriever.py  vector_store.py
tools/: arxiv_tool.py  openalex_tool.py  query_builder.py  scholar_tool.py  web_search_tool.py
