[project]
name = "compass-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.34.0",
    "langchain==0.2.1",
    "langchain-core==0.2.43",
    "langchain-community==0.2.1",
    "langchain-openai==0.1.8",
    "langgraph==0.2.28",
    "matplotlib>=3.10.9",
    "pypdf==4.3.1",
    "semanticscholar==0.8.4",
    "faiss-cpu==1.8.0",
    "tiktoken==0.7.0",
    "arxiv==2.1.3",
    "tavily-python==0.3.3",
    "openai==1.30.1",
    "reportlab==4.2.2",
    "streamlit==1.38.0",
    "python-dotenv==1.0.1",
    "pydantic==2.8.2",
    "requests==2.32.3",
    "numpy==1.26.4",
    "plotly==5.24.1",
    "duckduckgo-search==6.3.7",
    "httpx==0.27.0",
]
